# SL

./: .gitignore  1.py  ASYNC_MIGRATION_GUIDE.md  GEMMA_IMPLEMENTATION_SUMMARY.md  GPT2_SPLIT_README.md  GRADIO_BUTTON_FLOW.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION_GUIDE.md  QUICKSTART_GUIDE.md  README.md  diagnose_gradio.py  gpt2_client_gradio_grpc.py  gpt2_full_model_gradio.py  gpt2_server_grpc.py  qwen2_vl_2b_architecture_report.txt  qwen3_client_gradio.py  qwen3_client_gradio_grpc.py  qwen3_client_gradio_http.py  qwen3_server.py  qwen3_server_grpc.py  qwen3_server_http.py  run_client_framework3.sh  run_gpt2_client.sh  run_gpt2_full.sh  run_gpt2_server.sh  run_server_framework3.sh  按钮问题解决方案.md  问题诊断报告.md
SplitLearnComm/: .coverage  CONTRIBUTING.md  Makefile  README.md  coverage.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
SplitLearnComm/.pytest_cache/v/cache/: lastfailed  nodeids
SplitLearnComm/docs/: extending.md  project-summary.md
SplitLearnComm/examples/: server_ui_example.py  simple_client.py  simple_server.py  split_client.py  split_server.py  tensor_and_dict_example.py
SplitLearnComm/htmlcov/: function_index.html  z_13bba5a3c7e45830___init___py.html  z_13bba5a3c7e45830_grpc_server_py.html  z_13bba5a3c7e45830_servicer_py.html  z_b3f84cba0607e0e2___init___py.html  z_b3f84cba0607e0e2_compute_function_py.html  z_c0183a6ba8a63cbd___init___py.html  z_c0183a6ba8a63cbd___version___py.html  z_d3dc363e236efcc0___init___py.html  z_f2d3a75f04c11bb6_grpc_client_py.html  z_f2d3a75f04c11bb6_retry_py.html
SplitLearnComm/src/splitlearn_comm/: __init__.py  quickstart.py
SplitLearnComm/src/splitlearn_comm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
SplitLearnComm/src/splitlearn_comm/client/: grpc_client.py  retry.py
SplitLearnComm/src/splitlearn_comm/core/: __init__.py  async_compute_function.py  compute_function.py  kv_cache_codec.py  tensor_codec.py
SplitLearnComm/src/splitlearn_comm/monitoring/: __init__.py  config.py  log_manager.py  metrics_manager.py
SplitLearnComm/src/splitlearn_comm/protocol/: compute_service_pb2.py  compute_service_pb2.pyi  compute_service_pb2_grpc.py
SplitLearnComm/src/splitlearn_comm/protocol/protos/: compute_service.proto
SplitLearnComm/src/splitlearn_comm/server/: activation_cache.py  async_grpc_server.py  async_servicer.py  servicer.py
SplitLearnComm/src/splitlearn_comm/ui/: client_ui.py.backup  server_ui.py
SplitLearnComm/src/splitlearn_comm/ui/components/: __init__.py  stats_panel.py
SplitLearnComm/tests/: test_compute_function.py
SplitLearnCore/: LICENSE  README.md  (+5 more)
SplitLearnMonitor/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
SplitLearnMonitor/examples/: basic_client_monitoring.py  basic_server_monitoring.py  full_model_monitoring.py  merged_monitoring_example.py  quick_monitor_demo.py
SplitLearnMonitor/src/splitlearn_monitor/: __init__.py  __version__.py  config.py  utils.py
SplitLearnMonitor/src/splitlearn_monitor/collectors/: __init__.py  cpu_collector.py  gpu_collector.py  memory_collector.py
SplitLearnMonitor/src/splitlearn_monitor/core/: __init__.py  performance_tracker.py  system_monitor.py
SplitLearnMonitor/src/splitlearn_monitor/integrations/: __init__.py  client_monitor.py  full_model_monitor.py  server_monitor.py
SplitLearnMonitor/src/splitlearn_monitor/reporters/: __init__.py  data_exporter.py  html_reporter.py  markdown_reporter.py  merged_reporter.py
SplitLearnMonitor/src/splitlearn_monitor/visualizers/: __init__.py  comparison_viz.py  distribution_viz.py  time_series_viz.py
SplitLearning/: README.md  pyproject.toml
SplitLearning/docs/: INCREMENTAL_LOADING.md
SplitLearning/examples/: check_gemma_files.py  extending_new_model.py  test_model_storage.py  verify_gemma_registration.py
SplitLearning/src/splitlearn/: __init__.py  factory.py  registry.py
SplitLearning/src/splitlearn.egg-info/: SOURCES.txt  requires.txt  top_level.txt
SplitLearning/src/splitlearn/core/: base.py  bottom.py  trunk.py
SplitLearning/src/splitlearn/models/: __init__.py
SplitLearning/src/splitlearn/models/gemma/: trunk.py
SplitLearning/src/splitlearn/models/gpt2/: bottom.py
SplitLearning/src/splitlearn/utils/: __init__.py  param_mapper.py  shard_loader.py  storage.py
splitlearn-comm/: README.md  pyproject.toml
splitlearn-comm/docs/: api.md  protocol.md  quick-start.md
splitlearn-comm/examples/: UI_README.md  client_ui_example.py  custom_service.py
splitlearn-comm/htmlcov/: class_index.html  index.html  status.json  z_906834a7aa8ff9ea___init___py.html  z_b3f84cba0607e0e2_tensor_codec_py.html  z_f2d3a75f04c11bb6___init___py.html  z_ff3ffdbbf44e610d___init___py.html  z_ff3ffdbbf44e610d_compute_service_pb2_grpc_py.html  z_ff3ffdbbf44e610d_compute_service_pb2_py.html
splitlearn-comm/scripts/: compile_proto.sh
splitlearn-comm/src/splitlearn_comm/: __init__.py  __version__.py
splitlearn-comm/src/splitlearn_comm.egg-info/: PKG-INFO  top_level.txt
splitlearn-comm/src/splitlearn_comm/client/: __init__.py  grpc_client.py
splitlearn-comm/src/splitlearn_comm/core/: __init__.py  compute_function.py
splitlearn-comm/src/splitlearn_comm/protocol/: compute_service_pb2.py  compute_service_pb2.pyi  compute_service_pb2_grpc.py
splitlearn-comm/src/splitlearn_comm/server/: __init__.py  grpc_server.py  servicer.py
splitlearn-comm/src/splitlearn_comm/ui/: __init__.py  client_ui.py
splitlearn-comm/tests/: __init__.py  conftest.py  test_integration.py  test_retry.py  test_tensor_codec.py
splitlearn-manager/: README.md  pyproject.toml
splitlearn-manager/docs/: PROJECT_SUMMARY.md
splitlearn-manager/examples/: client_example.py  multi_model_server.py
splitlearn-manager/src/splitlearn_manager/: __init__.py  __version__.py
splitlearn-manager/src/splitlearn_manager/config/: model_config.py  server_config.py
splitlearn-manager/src/splitlearn_manager/core/: resource_manager.py
splitlearn-manager/src/splitlearn_manager/monitoring/: __init__.py  health.py
splitlearn-manager/src/splitlearn_manager/server/: managed_server.py
(+334 files in other folders)
