[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splitlearn-comm"
version = "1.0.0"
description = "A gRPC-based communication library for distributed computing"
authors = [
    {name = "SplitLearn Contributors"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["grpc", "distributed-computing", "deep-learning", "communication", "rpc"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "torch>=2.0.0",
    "grpcio>=1.60.0,<1.70.0",  # 稳定版本，避免依赖冲突
    "protobuf>=4.25.0,<5.0.0",  # 与 grpcio 兼容
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# Client: Minimal dependencies for gRPC client
client = [
    "grpcio>=1.76.0",
    "protobuf>=4.25.0",
]

# Server: Dependencies for async gRPC server
server = [
    "grpcio>=1.76.0",
    "protobuf>=4.25.0",
]

# UI: Optional UI support with Gradio
ui = [
    "gradio>=3.50.0,<5.0.0",
    "pandas>=1.5.0",
]

# Development: All dependencies for development
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.0.0",
    "black>=22.0.0",
    "isort>=5.12.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
    "grpcio-tools>=1.76.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "ipython>=8.0.0",
    "ipdb>=0.13.0",
    "gradio>=3.50.0,<5.0.0",
    "pandas>=1.5.0",
]

# All: Everything
all = [
    "splitlearn-comm[client,server,ui,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/SplitLearnComm"
Repository = "https://github.com/yourusername/SplitLearnComm"
Issues = "https://github.com/yourusername/SplitLearnComm/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
