[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "splitlearn-monitor"
version = "0.1.0"
description = "Performance monitoring library for Split Learning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Split Learning Team"}
]
keywords = ["split-learning", "monitoring", "performance", "profiling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "psutil>=5.9.0",
    "numpy>=1.24.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
gpu = [
    "pynvml>=11.5.0",
]
viz-interactive = [
    "plotly>=5.0.0",
    "kaleido>=0.2.0",
]
full = [
    "splitlearn-monitor[gpu,viz-interactive]",
    "pandas>=1.5.0",
    "jinja2>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.12.0",
    "mypy>=0.991",
]

[project.urls]
Homepage = "https://github.com/split-learning/SplitLearnMonitor"
Repository = "https://github.com/split-learning/SplitLearnMonitor"
Documentation = "https://github.com/split-learning/SplitLearnMonitor/blob/main/README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
